tests/integration/pilot/test_artifacts/pilot-f119641b99704107b0cfca0c6/TestTraffic/consistent-hash/query_parama/_test_context/Service-DestinationRule.922772735.yaml
apiVersion: v1
kind: Service
metadata:
  name: consistent-hash
  namespace: echo-2-60257
spec:
  ports:
  - name: http
    port: 80
    targetPort: 18080
  - name: tcp
    port: 9090
    targetPort: 19090
  selector:
    test.istio.io/class: standard
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: consistent-hash
  namespace: echo-2-60257
spec:
  host: consistent-hash
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpQueryParameterName: some-query-param
